objects/Zajemce_CV__c/Zajemce_CV__c.object-meta.xml
<CustomObject>
    <description>Zájemci o certifikaci CV pro newslettery</description>
    <label>Zájemce CV</label>
    <nameField>
        <label>Název</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zájemci CV</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>