objects/Zajemce_CV__c/fields/Castka__c.field-meta.xml
<CustomField>
    <fullName>Castka__c</fullName>
    <label>Částka</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>