objects/Zajemce_CV__c/fields/Jmeno__c.field-meta.xml
<CustomField>
    <fullName>Jmeno__c</fullName>
    <label>Jméno</label>
    <length>50</length>
    <type>Text</type>
</CustomField>