objects/Zajemce_CV__c/fields/Kemp__c.field-meta.xml
<CustomField>
    <fullName>Kemp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kemp</label>
    <type>Checkbox</type>
</CustomField>