objects/Zajemce_CV__c/fields/Oblast__c.field-meta.xml
<CustomField>
    <fullName>Oblast__c</fullName>
    <label>Oblast</label>
    <length>150</length>
    <type>Text</type>
</CustomField>