objects/Zajemce_CV__c/fields/Osloveni__c.field-meta.xml
<CustomField>
    <fullName>Osloveni__c</fullName>
    <label>Oslovení</label>
    <length>70</length>
    <type>Text</type>
</CustomField>