objects/Zajemce_CV__c/fields/Poznamka__c.field-meta.xml
<CustomField>
    <fullName>Poznamka__c</fullName>
    <label>Poznámka</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>