objects/Zajemce_CV__c/fields/Stravovani__c.field-meta.xml
<CustomField>
    <fullName>Stravovani__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stravování</label>
    <type>Checkbox</type>
</CustomField>