objects/Zajemce_CV__c/fields/Telefon__c.field-meta.xml
<CustomField>
    <fullName>Telefon__c</fullName>
    <label>Telefon</label>
    <length>50</length>
    <type>Text</type>
</CustomField>