objects/Zajemce_CV__c/fields/Turisticky_cil__c.field-meta.xml
<CustomField>
    <fullName>Turisticky_cil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turistický cíl</label>
    <type>Checkbox</type>
</CustomField>