objects/Zajemce_CV__c/fields/Ubytovani__c.field-meta.xml
<CustomField>
    <fullName>Ubytovani__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ubytování</label>
    <type>Checkbox</type>
</CustomField>