objects/Zajemce_CV__c/fields/Web__c.field-meta.xml
<CustomField>
    <fullName>Web__c</fullName>
    <label>Web</label>
    <type>Url</type>
</CustomField>