objects/Zajemce_CV__c/recordTypes/Zajemce_CV.recordType-meta.xml
<RecordType>
    <fullName>Zajemce_CV</fullName>
    <active>true</active>
    <label>Zájemce CV</label>
</RecordType>